force-app/main/default/objects/InboxLatestMessage__e/InboxLatestMessage__e.object-meta.xml
<CustomObject>
    <description>Inbox Latest Message on New Activity</description>
    <label>InboxLatestMessage</label>
    <pluralLabel>InboxLatestMessage</pluralLabel>
</CustomObject>