force-app/main/default/objects/InboxLatestMessage__e/fields/Activity_No__c.field-meta.xml
<CustomField>
    <fullName>Activity_No__c</fullName>
    <label>Activity No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>