force-app/main/default/objects/InboxLatestMessage__e/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <label>ActivityId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>