force-app/main/default/objects/InboxLatestMessage__e/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <length>20</length>
    <type>Text</type>
</CustomField>