force-app/main/default/objects/InboxLatestMessage__e/fields/External_Phone__c.field-meta.xml
<CustomField>
    <fullName>External_Phone__c</fullName>
    <label>External Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>