force-app/main/default/objects/InboxLatestMessage__e/fields/Formatted_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Phone__c</fullName>
    <label>Formatted Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>