force-app/main/default/objects/InboxLatestMessage__e/fields/media_url__c.field-meta.xml
<CustomField>
    <fullName>media_url__c</fullName>
    <label>media url</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>