force-app/main/default/objects/InboxLatestMessage__e/fields/Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Recording_URL__c</fullName>
    <label>Recording URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>