force-app/main/default/objects/InboxLatestMessage__e/fields/Unread_Activities__c.field-meta.xml
<CustomField>
    <fullName>Unread_Activities__c</fullName>
    <label>Unread Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>