force-app/main/default/objects/InboxLatestMessage__e/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <label>WhatId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>