force-app/main/default/objects/InboxLatestMessage__e/fields/When__c.field-meta.xml
<CustomField>
    <fullName>When__c</fullName>
    <label>When</label>
    <type>DateTime</type>
</CustomField>